Fixed overflow in navbar

--- a/assets/less/material.less
+++ b/assets/less/material.less
@@ -58,6 +58,10 @@ md-toast {
   }
 }
 
+md-content.navigation {
+  overflow: visible;
+}
+
 .margin {
   margin-left: -6px;
 }
